Revert package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "clean": "rimraf build",
     "build": "set NODE_ENV=production npm run clean && webpack -p",
     "serve": "webpack-dev-server",
-    "deploy": "npm run build && git subtree push --prefix build origin gh-pages",
-    "start": "node server.js"
+    "deploy": "npm run build && git subtree push --prefix build origin gh-pages"
   },
   "repository": "https://github.com/StephenGrider/WebpackProject",
   "author": "",
